# queenhelados-points

./: .env.example  README.md  main.py  pyproject.toml
.github/workflows/: run.yml
src/: main.py
src/adapters/: gdrive.py  storage_adapter.py
src/api_callers/: api_caller.py  tdp.py
src/data_processors/: articles.py  client_list.py  data_processor.py  pos.py  sales_by_article.py
src/file_parsers/: excel.py  file_parser.py
src/file_processors/: client_list.py  file_processor.py  pos.py  sales_by_article.py
src/lib/: config.py  excel_parser.py  orchestrator.py
src/persistence_adapters/: persistence_adapter.py  supabase.py
src/persistence_controllers/: persistence_controller.py  supabase.py
src/storage_adapters/: gdrive.py
src/util/: path.py
