[project]
name = "queenhelados-points"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.193.0",
    "google-auth>=2.49.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.ruff.lint]
extend-select = ["ANN"]
